Adding scheduler for fifo task processor
